<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <data>
        <import type="android.view.View"/>
        <variable
            name="speaker"
            type="io.github.droidkaigi.confsched2018.model.Speaker"
            />
    </data>
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <ImageButton
            android:id="@+id/speaker_detail_twitter"
            style="@style/SNSLinkButton"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/speaker_dialog_content_description_twitter"
            android:visibility="@{speaker.twitterUrl == null ? View.GONE : View.VISIBLE}"
            app:layout_constraintEnd_toStartOf="@+id/speaker_detail_github"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_twitter_blue_48dp"
            />
        <ImageButton
            android:id="@+id/speaker_detail_github"
            style="@style/SNSLinkButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/speaker_dialog_content_description_github"
            android:visibility="@{speaker.githubUrl == null ? View.GONE : View.VISIBLE}"
            app:layout_constraintBottom_toBottomOf="@+id/speaker_detail_twitter"
            app:layout_constraintEnd_toStartOf="@+id/speaker_detail_company"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/speaker_detail_twitter"
            app:layout_constraintTop_toTopOf="@+id/speaker_detail_twitter"
            app:srcCompat="@drawable/ic_github_black_48dp"
            />
        <ImageButton
            android:id="@+id/speaker_detail_company"
            style="@style/SNSLinkButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/speaker_dialog_content_description_company"
            android:visibility="@{speaker.companyUrl == null ? View.GONE : View.VISIBLE}"
            app:layout_constraintBottom_toBottomOf="@+id/speaker_detail_github"
            app:layout_constraintEnd_toStartOf="@+id/speaker_detail_blog"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/speaker_detail_github"
            app:layout_constraintTop_toTopOf="@+id/speaker_detail_github"
            app:srcCompat="@drawable/ic_company_black_48dp"
            />
        <ImageButton
            android:id="@+id/speaker_detail_blog"
            style="@style/SNSLinkButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/speaker_dialog_content_description_blog"
            android:visibility="@{speaker.blogUrl == null ? View.GONE : View.VISIBLE}"
            app:layout_constraintBottom_toBottomOf="@+id/speaker_detail_company"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/speaker_detail_company"
            app:layout_constraintTop_toTopOf="@+id/speaker_detail_company"
            app:srcCompat="@drawable/ic_blog_black_48dp"
            />
        <TextView
            android:id="@+id/speaker_detail_twitter_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/speaker_dialog_text_twitter"
            android:visibility="@{speaker.twitterUrl == null ? View.GONE : View.VISIBLE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/speaker_detail_twitter"
            app:layout_constraintStart_toStartOf="@+id/speaker_detail_twitter"
            app:layout_constraintTop_toBottomOf="@+id/speaker_detail_twitter"
            />
        <TextView
            android:id="@+id/speaker_detail_github_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/speaker_dialog_text_github"
            android:visibility="@{speaker.githubUrl == null ? View.GONE : View.VISIBLE}"
            app:layout_constraintEnd_toEndOf="@+id/speaker_detail_github"
            app:layout_constraintStart_toStartOf="@+id/speaker_detail_github"
            app:layout_constraintTop_toBottomOf="@+id/speaker_detail_github"
            />
        <TextView
            android:id="@+id/speaker_detail_company_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/speaker_dialog_text_company"
            android:visibility="@{speaker.companyUrl == null ? View.GONE : View.VISIBLE}"
            app:layout_constraintEnd_toEndOf="@+id/speaker_detail_company"
            app:layout_constraintStart_toStartOf="@+id/speaker_detail_company"
            app:layout_constraintTop_toBottomOf="@+id/speaker_detail_company"
            />
        <TextView
            android:id="@+id/speaker_detail_blog_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/speaker_dialog_text_blog"
            android:visibility="@{speaker.blogUrl == null ? View.GONE : View.VISIBLE}"
            app:layout_constraintEnd_toEndOf="@+id/speaker_detail_blog"
            app:layout_constraintStart_toStartOf="@+id/speaker_detail_blog"
            app:layout_constraintTop_toBottomOf="@+id/speaker_detail_blog"
            />
        <TextView
            android:id="@+id/speaker_detail_sns_empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:text="@string/speaker_sns_empty_message"
            android:textAppearance="@style/TextAppearance.App.Subhead"
            android:visibility="@{speaker.twitterUrl == null &amp;&amp; speaker.githubUrl == null &amp;&amp; speaker.companyUrl == null &amp;&amp; speaker.blogUrl == null ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />
    </android.support.constraint.ConstraintLayout>
</layout>
