<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <data></data>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/sessions_constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <TextView
            android:id="@+id/day_header"
            style="@style/DayHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:targetApi="lollipop"
            tools:text="DAY1"
            />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/sessions_recycler"
            style="@style/BaseRecyclerView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layoutManager="android.support.v7.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:listitem="@layout/item_speech_session"
            />

        <ImageView
            android:id="@+id/mysession_inactive_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/favorite_content_description_not_found"
            app:layout_constraintBottom_toTopOf="@+id/mysession_inactive_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            app:srcCompat="@drawable/ic_mysession_inactive"
            />
        <TextView
            android:id="@+id/mysession_inactive_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/favorite_not_found"
            style="@style/TextStyle.App.Title"
            app:layout_constraintBottom_toTopOf="@+id/mysession_inactive_detail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mysession_inactive_image"
            />
        <TextView
            android:id="@+id/mysession_inactive_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:text="@string/favorite_not_found_detail"
            style="@style/TextStyle.App.Caption"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mysession_inactive_title"
            />
        <android.support.constraint.Group
            android:id="@+id/mysession_inactive_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:constraint_referenced_ids="mysession_inactive_title,mysession_inactive_image,mysession_inactive_detail"
            />
        <ProgressBar
            android:id="@+id/progress"
            android:visibility="gone"
            style="@style/ProgressBar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />
    </android.support.constraint.ConstraintLayout>
</layout>
